@@ -1,7 +1,7 @@
 MCABBER(1)
 ===========
 Mikael BERTHE <mcabber@lilotux.net>
-v1.0.1, January 2016
+v1.0.2-dev, January 2016
 
 NAME
 ----
